added section on navigating help system by keyboard

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -53,13 +53,32 @@
  <h2>Accelerators </h2>
  <p>Many of the actions in Eclipse have an accelerator assigned to them. For the
  full list of these accelerators see the Keyboard shortcuts reference below. </p>
+ <h2>Help system</h2>
+ <p>You can navigate the help system by keyboard using the following key 
+ combinations:</p>
+ <ul>
+   <li>Pressing Tab inside a frame (page) takes you to the next link, button or 
+   topic node. </li>
+   <li>To expand/collapse a tree node, press Right/Left arrows. </li>
+   <li>To move to the next topic node, press Down arrow or Tab </li>
+   <li>To move to the previous topic node, press Up arrow or Shift+Tab </li>
+   <li>To scroll all the way up or down press Home or End. </li>
+   <li>To go back press Alt+Left arrow; to go forward press Alt+Right arrow.
+   </li>
+   <li>To go to the next frame press Ctrl+Tab. There are quite a number of 
+   frames in the help system. </li>
+   <li>To move to previous frame, press Shift+Ctrl+Tab. </li>
+   <li>To print the current page or active frame, press Ctrl+P. </li>
+ </ul>
 <p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
  <a href="accessmain.htm">Accessibility Features in Eclipse</a><br>
  <a href="../../tasks/tkeybindings.htm">Changing the key bindings</a><br>
- <a href="keyboardshortcuts.htm">Keyboard shortcuts</a> 
-</p>
+ <a href="keyboardshortcuts.htm">Keyboard shortcuts</a> <br>
+<a href="../chelpsys.htm">Online help system</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
- <a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
+ <a href="fontsandcolors.htm">Font and color settings using the Window 
+ Preferences</a></p>
 
-<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a></p> 
+<p><a href="../../hglegal2002.htm">
+<img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p> 
 </body>
