--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -25,7 +25,7 @@ major sets of documentation available.
     view a topic, click the link in the topic tree. </li>
   <li>Most topics provide a list of links to related topics at the bottom.
     Follow these links to learn more.</li>
-  <li>Use the <b>Forward</b> and <b>Back</b> buttons in the toolbar. These behave 
+  <li>Use the <b>Go Forward</b> and <b>Go Back</b> buttons. These behave 
     the same way back and forward buttons work in an Internet browser, taking 
     you to topics you have already looked at.</li>
   <li>To synchronize the navigation frame with the current topic, click the <b>Synchronize</b> 
